# ilqrs

./: .gitignore  Cargo.toml
src/: cost.rs  dynamics.rs  ilqr.rs  lib.rs  linear.rs  prelude.rs  proptest.rs  quadratic.rs  state_and_control.rs
src/autodiff/: autodiff1.rs  autodiff2.rs  mod.rs
