[package]
name = "ilqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30"
itertools = "0.10"
num-traits = { version = "0.2", optional = true }
simba = { version = "0.7", optional = true }
proptest = { version = "1.0", optional = true }

[dev-dependencies]
ilqrs = { path = ".", features = ["proptest-support"] }
more-asserts = "0.2"
plotters = "0.3"

[features]
default = ["autodiff"]
proptest-support = ["dep:proptest", "nalgebra/proptest-support"]
autodiff = ["num-traits", "simba"]
